--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,12 @@ textarea::placeholder{color:#4b5563}
 .spinner{display:inline-block;width:14px;height:14px;border:2px solid #333;border-top-color:#10b981;border-radius:50%;animation:spin .6s linear infinite;margin-right:6px;vertical-align:middle}
 @keyframes spin{to{transform:rotate(360deg)}}
 .btn-delete{background:none;border:none;cursor:pointer;float:right;font-size:14px;opacity:.4;padding:2px 4px;border-radius:4px}.btn-delete:hover{opacity:1;background:#1a0505}
+.toggle{position:relative;width:36px;height:20px;flex-shrink:0}
+.toggle input{opacity:0;width:0;height:0}
+.toggle-slider{position:absolute;inset:0;background:#333;border-radius:20px;cursor:pointer;transition:all .2s}
+.toggle-slider::before{content:"";position:absolute;width:16px;height:16px;left:2px;bottom:2px;background:#888;border-radius:50%;transition:all .2s}
+.toggle input:checked+.toggle-slider{background:#059669}
+.toggle input:checked+.toggle-slider::before{transform:translateX(16px);background:#fff}
 .hidden{display:none!important}
 .privacy-link{color:#6b7280;cursor:pointer;text-decoration:underline;text-decoration-style:dotted;text-underline-offset:2px}
 .privacy-link:hover{color:#9ca3af}
@@ -114,7 +120,7 @@ textarea::placeholder{color:#4b5563}
 <header>
 <h1>&#x1f510; Secret Sanitizer<span>Paste &rarr; Detect &rarr; Clean</span></h1>
 <div class="header-actions">
-<button class="btn" onclick="toggleHistory()">&#x1f4cb; History</button>
+<button class="btn" id="historyBtn" onclick="toggleHistory()">&#x1f4cb; History</button>
 <button class="btn btn-danger" onclick="clearAll()">Clear</button>
 </div>
 </header>
@@ -167,7 +173,7 @@ Supports text files, .json, .yaml, .toml, .env, .sh, .log, .md, .pdf, .docx and 
 <div class="status-bar"><span id="status">Ready</span><span style="display:flex;gap:16px;align-items:center"><span class="privacy-link" onclick="togglePrivacy()">&#x1f512; Privacy</span><span id="lastRun"></span></span></div>
 <div class="history-overlay" id="historyOverlay" onclick="toggleHistory()"></div>
 <div class="history-drawer" id="historyDrawer">
-<div class="history-header"><h2>History</h2><button class="btn" onclick="toggleHistory()">&#x2715;</button></div>
+<div class="history-header"><h2>History</h2><div style="display:flex;gap:8px;align-items:center"><label class="toggle"><input type="checkbox" id="historyToggle" onchange="setHistoryEnabled(this.checked)"><span class="toggle-slider"></span></label><button class="btn" onclick="toggleHistory()">&#x2715;</button></div></div>
 <div class="history-list" id="historyList"></div>
 </div>
 <div class="toast" id="toast"></div>
@@ -201,12 +207,15 @@ Supports text files, .json, .yaml, .toml, .env, .sh, .log, .md, .pdf, .docx and 
 </div>
 </div>
 <script>
-const HISTORY_KEY="ss_history",MAX_HISTORY=50,TTL=86400000;
+const HISTORY_KEY="ss_history",HISTORY_ENABLED_KEY="ss_history_enabled",MAX_HISTORY=50,TTL=86400000;
+let historyEnabled=localStorage.getItem(HISTORY_ENABLED_KEY)==="true";
 let history=loadHistory(), currentTab="text", selectedFile=null, scanDepth="quick";
 const BINARY_EXTENSIONS=[".pdf",".docx"];
 
-function loadHistory(){try{const h=JSON.parse(localStorage.getItem(HISTORY_KEY)||"[]");return h.filter(i=>Date.now()-i.ts<TTL)}catch(e){return[]}}
-function saveHistory(){localStorage.setItem(HISTORY_KEY,JSON.stringify(history.slice(0,MAX_HISTORY)))}
+function loadHistory(){if(!historyEnabled)return[];try{const h=JSON.parse(localStorage.getItem(HISTORY_KEY)||"[]");return h.filter(i=>Date.now()-i.ts<TTL)}catch(e){return[]}}
+function saveHistory(){if(!historyEnabled)return;localStorage.setItem(HISTORY_KEY,JSON.stringify(history.slice(0,MAX_HISTORY)))}
+function setHistoryEnabled(on){historyEnabled=on;localStorage.setItem(HISTORY_ENABLED_KEY,on?"true":"false");if(!on){history=[];localStorage.removeItem(HISTORY_KEY)}else{history=loadHistory()}updateHistoryButton();renderHistory()}
+function updateHistoryButton(){var btn=document.getElementById("historyBtn");if(btn)btn.textContent=historyEnabled?"\ud83d\udccb History":"\ud83d\udccb History (off)"}
 
 function setDepth(d){
   scanDepth=d;
@@ -394,6 +403,8 @@ function togglePrivacy(){
 
 function renderHistory(){
   var list=document.getElementById("historyList");
+  var toggle=document.getElementById("historyToggle");if(toggle)toggle.checked=historyEnabled;
+  if(!historyEnabled){list.innerHTML='<div style="padding:32px 16px;text-align:center"><p style="color:#6b7280;margin-bottom:8px">\ud83d\udeab History is disabled</p><p style="color:#4b5563;font-size:12px">Enable it above to save scan results locally in your browser.</p></div>';return}
   history=loadHistory();
   if(!history.length){list.innerHTML='<p style="color:#6b7280;padding:16px;text-align:center">No history yet</p>';return}
   list.innerHTML=history.map(function(h,i){
@@ -421,6 +432,7 @@ function escHtml(s){return s.replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(
 function showToast(msg){var t=document.getElementById("toast");t.textContent=msg;t.classList.add("show");setTimeout(function(){t.classList.remove("show")},2000)}
 document.getElementById("input").addEventListener("input",function(){document.getElementById("charCount").textContent=this.value.length+" chars"});
 document.getElementById("input").addEventListener("keydown",function(e){if((e.ctrlKey||e.metaKey)&&e.key==="Enter")sanitize()});
+updateHistoryButton();
 </script>
 </body>
 </html>
